--- a/simple-state-machine/index.html
+++ b/simple-state-machine/index.html
@@ -12,6 +12,7 @@
   <pre>
     CODE:
     <code>
+      // This is just a quick example that can be fleshed out more based on need!
       class StateMachine {
         constructor (A, S, S0, T, F) {
           this.A = A
